# croc-fi

./: .gitignore  GTM.md  PITCH.md  README.md  RUNNING.md  SKILLS.md  dev.sh  skills-lock.json
backend/: .env.example  .gitignore  docker-compose.yml  package-lock.json  package.json  start.sh
backend/api/: package.json  vitest.config.mts
backend/api/src/: app.ts  index.ts
backend/attestor/: package.json  tsconfig.json
backend/attestor/src/: attestor.ts  index.ts  nav-calculator.ts  on-chain.ts  proof-hasher.ts  yield-source.ts
backend/scripts/: demo-flow.ts  package.json  setup-localnet.ts
backend/sdk/: package.json  tsconfig.json
backend/sdk/src/: client.ts  index.ts
backend/shared/: package.json
backend/shared/prisma/: schema.prisma
backend/shared/src/: config.ts  constants.ts  db.ts  (+2 more)
frontend/: .gitignore  eslint.config.mjs  package-lock.json  package.json
program/: .gitignore  Anchor.toml  admzWKEZFRemDd5HTJL1oM8iy9cCywzPbMGqvm6Azzh.json  croZ9hcrqGz3fZHTkBfEaRbZQXkhfW4ZhbVBiFinNrF.json  devnet-usdc.json  generate-client.ts  generate-clients.ts  hok77RhLaScwvc4Fsk3EU7DKBzGK1oEeUcMWnodnwQJ.json  package.json  tee7KvPfbWLtJPn7wRK5rDG2Pb8qxpEFPF487NBc5Px.json
program/programs/proof-layer-hook/: Cargo.toml
program/programs/proof-layer-hook/src/: lib.rs
program/scripts/: create-devnet-usdc.ts  init-program.ts  setup-attestation.ts
tg-claude-bot/: .env.example  .gitignore  Dockerfile  bot.sh  docker-compose.yml  package.json
tg-claude-bot/prompts/: system.md
tg-claude-bot/src/: ai.ts  bot.ts  context.ts  index.ts  ratelimit.ts  router.ts
(+108 files in other folders)
